--- a/resorce.qrc
+++ b/resorce.qrc
@@ -2,5 +2,8 @@
     <qresource prefix="/image">
         <file>background2</file>
         <file>brick2</file>
+        <file>key2</file>
+        <file>background1</file>
+        <file>brick1</file>
     </qresource>
 </RCC>
